; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-secure-send.c_answer_forget.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-secure-send.c_answer_forget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.process_id = type { i32 }
%struct.secure_receive_answer = type { i64, i32, i64, i32, %struct.process_id }
%struct.tree_secure_receive_answer = type { %struct.secure_receive_answer* }

@secure_receive_answer_tree = common dso_local global i32 0, align 4
@secure_answer_allocated = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @answer_forget(i64 %0, %struct.process_id* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.process_id*, align 8
  %5 = alloca %struct.secure_receive_answer, align 8
  %6 = alloca %struct.tree_secure_receive_answer*, align 8
  %7 = alloca %struct.secure_receive_answer*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.process_id* %1, %struct.process_id** %4, align 8
  %8 = load i64, i64* %3, align 8
  %9 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %5, i32 0, i32 0
  store i64 %8, i64* %9, align 8
  %10 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %5, i32 0, i32 4
  %11 = load %struct.process_id*, %struct.process_id** %4, align 8
  %12 = bitcast %struct.process_id* %10 to i8*
  %13 = bitcast %struct.process_id* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 %13, i64 4, i1 false)
  %14 = load i32, i32* @secure_receive_answer_tree, align 4
  %15 = call %struct.tree_secure_receive_answer* @tree_lookup_secure_receive_answer(i32 %14, %struct.secure_receive_answer* %5)
  store %struct.tree_secure_receive_answer* %15, %struct.tree_secure_receive_answer** %6, align 8
  %16 = load %struct.tree_secure_receive_answer*, %struct.tree_secure_receive_answer** %6, align 8
  %17 = icmp ne %struct.tree_secure_receive_answer* %16, null
  br i1 %17, label %18, label %49

18:                                               ; preds = %2
  %19 = load i32, i32* @secure_receive_answer_tree, align 4
  %20 = load %struct.tree_secure_receive_answer*, %struct.tree_secure_receive_answer** %6, align 8
  %21 = getelementptr inbounds %struct.tree_secure_receive_answer, %struct.tree_secure_receive_answer* %20, i32 0, i32 0
  %22 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %21, align 8
  %23 = call i32 @tree_delete_secure_receive_answer(i32 %19, %struct.secure_receive_answer* %22)
  store i32 %23, i32* @secure_receive_answer_tree, align 4
  %24 = load %struct.tree_secure_receive_answer*, %struct.tree_secure_receive_answer** %6, align 8
  %25 = getelementptr inbounds %struct.tree_secure_receive_answer, %struct.tree_secure_receive_answer* %24, i32 0, i32 0
  %26 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %25, align 8
  store %struct.secure_receive_answer* %26, %struct.secure_receive_answer** %7, align 8
  %27 = load i32, i32* @secure_answer_allocated, align 4
  %28 = add nsw i32 %27, -1
  store i32 %28, i32* @secure_answer_allocated, align 4
  %29 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %7, align 8
  %30 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @free(i32 %31)
  %33 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %7, align 8
  %34 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %33, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %18
  %38 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %7, align 8
  %39 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %38, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = call i32 @tl_query_header_delete(i64 %40)
  br label %42

42:                                               ; preds = %37, %18
  %43 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %7, align 8
  %44 = getelementptr inbounds %struct.secure_receive_answer, %struct.secure_receive_answer* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @delete_binlog_pos(i32 %45, i32 1)
  %47 = load %struct.secure_receive_answer*, %struct.secure_receive_answer** %7, align 8
  %48 = call i32 @zfree(%struct.secure_receive_answer* %47, i32 32)
  br label %49

49:                                               ; preds = %42, %2
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local %struct.tree_secure_receive_answer* @tree_lookup_secure_receive_answer(i32, %struct.secure_receive_answer*) #2

declare dso_local i32 @tree_delete_secure_receive_answer(i32, %struct.secure_receive_answer*) #2

declare dso_local i32 @free(i32) #2

declare dso_local i32 @tl_query_header_delete(i64) #2

declare dso_local i32 @delete_binlog_pos(i32, i32) #2

declare dso_local i32 @zfree(%struct.secure_receive_answer*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
